--- a/public/styles/userStyle.css
+++ b/public/styles/userStyle.css
@@ -55,57 +55,7 @@ main{
     padding: 0;
 }
 .main-container{
-    max-width: 1420px;
-    height: 800px;
-    margin: 0 auto;
-    display: flex;
+    display: grid;
     justify-content: center;
-    position: relative;
-    background-color: rgb(245, 245, 245);
-}
-.form{
-    margin: 50px;
-    max-height: 300px;
-    max-width: 400px;
-    width: 500px;
-    display: flex;
-    justify-content: center;
-    border-radius: 20px;
-    background-color: white;
-    box-shadow: 1px 1px 5px 1px;
-
-}
-form{
     text-align: center;
-}
-.form input{
-    text-align: center;
-}
-#name{
-    width: 270px ;
-    height: 28px;
-    border-radius: 10px;
-    border: solid 1px black;
-}
-#password{
-    width: 270px ;
-    height: 28px;
-    border-radius: 10px;
-    border: solid 1px black;
-}
-#mail{
-    width: 270px ;
-    height: 28px;
-    border-radius: 10px;
-    border: solid 1px black;
-}
-#bt{
-margin-top: 5px;
-width: 180px;
-height: 32px;
-border-radius: 12px;
-border: none;
-background-color: rgb(143, 22, 22);
-color: white;
-box-shadow:inset -2px -2px 5px 0.5px black ;
 }
