--- a/public/styles/loginStyle.css
+++ b/public/styles/loginStyle.css
@@ -1,3 +1,8 @@
+*{
+    font-family: 'Russo One', sans-serif;
+}
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+
 body{
     padding: 0;
     margin: 0 auto;
@@ -8,17 +13,32 @@ header{
     padding: 0;
 }
 
-.header h1{
+.header .logo{
     color: white;
     padding-left: 40px;
-    
+    padding: 15px;
+    font-size: 34px;
+    text-decoration: none;
 }
+
+.log{
+    display: flex;
+    align-items: center;
+    transition: 1s;
+}
+
+.log:hover{
+    padding-left: 10px;
+}
+
+
+
 .header{
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     max-width: 1920px;
-    background: linear-gradient(90deg, rgb(160, 24, 24),rgb(129, 11, 11));
+    background: linear-gradient(to right, rgb(31, 30, 30),rgb(41, 41, 41));
     box-shadow: 0px 1px 10px 1px black;
     position:relative;
     z-index: 2;
@@ -50,6 +70,11 @@ header{
     text-decoration: none;
     color: white;
 }
+
+.menu a:hover{
+    border-bottom: solid 1px white;
+}
+
 main{
     margin: 0 auto;
     padding: 0;
@@ -102,4 +127,32 @@ border: none;
 background-color: rgb(143, 22, 22);
 color: white;
 box-shadow:inset -2px -2px 5px 0.5px black ;
+}
+
+
+
+
+
+footer{
+    padding: 0;
+    margin: 0 auto;
+    width: 100%;
+    height: 200px;
+    background: linear-gradient(to bottom, rgb(31, 30, 30),rgb(41, 41, 41));
+    max-width: 1920px;
+}
+
+.footer-container{
+    margin: 0 auto;
+    width: 300px;
+    display: flex;
+    padding-top: 60px;
+    color: white;
+    align-items: center;
+    flex-direction: column;
+
+}
+
+#footerText2{
+    border-bottom: solid white 1px;
 }
