--- a/public/styles/newsStyle.css
+++ b/public/styles/newsStyle.css
@@ -2,6 +2,7 @@
     font-family: 'Russo One', sans-serif;
 }
 @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+
 body{
     padding: 0;
     margin: 0 auto;
@@ -18,7 +19,6 @@ header{
     padding: 15px;
     font-size: 34px;
     text-decoration: none;
-
 }
 
 .log{
@@ -81,16 +81,54 @@ main{
 }
 .main-container{
     max-width: 1420px;
-    height: 800px;
+    height: 100%;
     margin: 0 auto;
     display: flex;
     justify-content: center;
-    position: relative;
+    flex-wrap: wrap;
+    align-content: flex-start;
+   
     background-color: rgb(245, 245, 245);
 }
 
 
+li{
+    list-style-type: none;
+}
 
+.new{
+    padding: 10px;
+    width: 1315px;
+    height: 130px;
+    margin-top: 15px; 
+    margin-bottom: 15px; 
+    /* background-color:  rgb(228, 228, 228); */
+    border-radius: 15px;
+    box-shadow: 1px 0px 3px 1px rgba(0, 0, 0, 0.397);
+    border-bottom:solid black 1px ;
+}
+
+@media(max-width:1370px){
+    .main-container{
+        margin: 0 auto;
+        max-width: 1000px;
+        padding: 30px;
+    }
+
+    .new{
+        max-width: 100%;
+        padding: 10px;
+    }
+}
+@media(max-width:1200px){
+    header{
+        font-size: x-small;
+        padding: 0;
+    }
+    .header h1{
+        padding-left: 10px;
+    }
+}
 
 
 
@@ -117,3 +155,6 @@ footer{
 #footerText2{
     border-bottom: solid white 1px;
 }
+
+
+
